--- a/demo/template/index.ejs
+++ b/demo/template/index.ejs
@@ -13,7 +13,7 @@
 
 <body>
   <div class="wrapper" id="react">
-    <%- include ./template/common/loading.ejs %>
+    <%- include common/loading %>
   </div>
 </body>
 
